fixed vertical alignment of weather icon and current temperature

--- a/main.css
+++ b/main.css
@@ -23,14 +23,8 @@ body {
 }
 
 #weather-icon {
-  margin-right: 20px;
-}
-
-.fa {
-  font-size: 40px;
   margin-top: auto;
-  margin-bottom: auto;
-  margin-right: 20px;
+  padding: 0;
 }
 
 .temperature {
@@ -38,6 +32,12 @@ body {
   flex-direction: row;
   justify-content: center;
   vertical-align: middle;
+}
+
+h3 {
+  font-size: 30px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .location {
